--- a/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
+++ b/src/PlatformExampleApp/PlatformExampleApp.TextSnippet.Api/appsettings.json
@@ -19,10 +19,11 @@
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Warning",
+        "Hangfire": "Warning",
         "Easy.Platform": "Information",
         "Easy.Platform.Infrastructures.MessageBus.PlatformMessageBusConsumer": "Warning",
         "Easy.Platform.Infrastructures.BackgroundJob": "Warning",
-        "Microsoft.EntityFrameworkCore": "Error"
+        "Microsoft.EntityFrameworkCore": "Warning"
       }
     }
   },
