--- a/src/Platform/Easy.Platform/Easy.Platform.csproj
+++ b/src/Platform/Easy.Platform/Easy.Platform.csproj
@@ -47,6 +47,7 @@
     <PackageReference Include="Pyroscope" Version="0.8.14" />
     <!--Package used to enhance the performance analysis and optimization of .NET applications-->
     <PackageReference Include="Ulid" Version="1.3.3" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>
 
 </Project>
