--- a/src/PlatformExampleApp/PlatformExampleApp.Benchmark/PlatformExampleApp.Benchmark.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Benchmark/PlatformExampleApp.Benchmark.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,10 +6,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PlatformExampleApp.TextSnippet.Api\PlatformExampleApp.TextSnippet.Api.csproj" />
