--- a/src/Platform/Easy.Platform.AutomationTest/Easy.Platform.AutomationTest.csproj
+++ b/src/Platform/Easy.Platform.AutomationTest/Easy.Platform.AutomationTest.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.1" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
-    <PackageReference Include="FluentAssertions" Version="6.12.2" />
+    <PackageReference Include="FluentAssertions" Version="[7.0.0]" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="9.0.0" />
     <PackageReference Include="Roslyn.Analyzers" Version="1.0.3.4" />
     <PackageReference Include="Selenium.Support" Version="4.27.0" />
