--- a/src/PlatformExampleAppWeb/package.json
+++ b/src/PlatformExampleAppWeb/package.json
@@ -1,24 +1,23 @@
 {
     "dependencies": {
-        "@angular/animations": "18.0.1",
-        "@angular/cdk": "18.0.1",
-        "@angular/common": "18.0.1",
-        "@angular/compiler": "18.0.1",
-        "@angular/core": "18.0.1",
-        "@angular/forms": "18.0.1",
-        "@angular/localize": "18.0.1",
-        "@angular/material": "18.0.1",
-        "@angular/material-moment-adapter": "18.0.1",
-        "@angular/platform-browser": "18.0.1",
-        "@angular/platform-browser-dynamic": "18.0.1",
-        "@angular/pwa": "18.0.2",
-        "@angular/router": "18.0.1",
-        "@angular/service-worker": "18.0.1",
-        "@ng-select/ng-select": "^13.2.0",
-        "@ngneat/hot-toast": "^7.0.0",
+        "@angular/animations": "^19.0.6",
+        "@angular/cdk": "^19.0.5",
+        "@angular/common": "^19.0.6",
+        "@angular/compiler": "^19.0.6",
+        "@angular/core": "^19.0.6",
+        "@angular/forms": "^19.0.6",
+        "@angular/localize": "^19.0.6",
+        "@angular/material": "^19.0.5",
+        "@angular/material-moment-adapter": "^19.0.5",
+        "@angular/platform-browser": "^19.0.6",
+        "@angular/platform-browser-dynamic": "^19.0.6",
+        "@angular/pwa": "^19.0.7",
+        "@angular/router": "^19.0.6",
+        "@angular/service-worker": "^19.0.6",
+        "@ng-select/ng-select": "^14.2.0",
         "@ngneat/input-mask": "^6.1.0",
         "@ngneat/overview": "^6.0.0",
-        "@ngrx/component-store": "^17.0.1",
+        "@ngrx/component-store": "^19.0.0",
         "@ngx-translate/core": "^14.0.0",
         "@ngx-translate/http-loader": "^7.0.0",
         "angular-oauth2-oidc": "^17.0.2",
@@ -32,24 +31,23 @@
         "ngx-toastr": "^19.0.0",
         "rxjs": "^7.8.1",
         "tslib": "2.3.0",
-        "type-fest": "^4.15.0",
-        "zone.js": "0.14.4"
+        "type-fest": "^4.15.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.0.0",
-        "@angular-devkit/core": "^18.0.0",
-        "@angular-devkit/schematics": "^18.0.0",
-        "@angular-eslint/eslint-plugin": "^18.0.0",
-        "@angular-eslint/eslint-plugin-template": "^18.0.0",
-        "@angular-eslint/template-parser": "^18.0.0",
-        "@angular/cli": "^18.0.0",
-        "@angular/compiler-cli": "^18.0.0",
-        "@angular/language-service": "^18.0.0",
-        "@nx/angular": "^19.1.1",
-        "@nx/eslint": "^19.1.1",
-        "@nx/eslint-plugin": "^19.1.1",
-        "@nx/jest": "^19.1.1",
-        "@nx/workspace": "^19.1.1",
+        "@angular-devkit/build-angular": "^19.0.7",
+        "@angular-devkit/core": "^19.0.7",
+        "@angular-devkit/schematics": "^19.0.7",
+        "@angular-eslint/eslint-plugin": "^19.0.2",
+        "@angular-eslint/eslint-plugin-template": "^19.0.2",
+        "@angular-eslint/template-parser": "^19.0.2",
+        "@angular/cli": "^19.0.7",
+        "@angular/compiler-cli": "^19.0.6",
+        "@angular/language-service": "^19.0.6",
+        "@nx/angular": "^20.3.1",
+        "@nx/eslint": "^20.3.1",
+        "@nx/eslint-plugin": "^20.3.1",
+        "@nx/jest": "^20.3.1",
+        "@nx/workspace": "^20.3.1",
         "@schematics/angular": "^18.0.0",
         "@types/inputmask": "^5.0.7",
         "@types/jest": "^29.5.12",
@@ -65,14 +63,14 @@
         "eslint-plugin-prettier": "^5.1.1",
         "eslint-plugin-sonar": "^0.12.0",
         "eslint-plugin-sonarjs": "^0.23.0",
-        "eslint-plugin-unused-imports": "^3.0.0",
+        "eslint-plugin-unused-imports": "^4.1.4",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
-        "jest-preset-angular": "^14.1.0",
+        "jest-preset-angular": "^14.5.0",
         "js-beautify": "^1.14.6",
-        "ng-packagr": "^18.0.0",
+        "ng-packagr": "^19.0.1",
         "nx": "^19.1.1",
-        "nx-cloud": "^19.0.0",
+        "nx-cloud": "^19.1.0",
         "postcss": "^8.4.35",
         "postcss-import": "^14.1.0",
         "postcss-preset-env": "^7.5.0",
@@ -82,7 +80,7 @@
         "prettier": "~3.1.1",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.2.0"
+        "typescript": "^5.6.0"
     },
     "engines": {
         "node": ">=14.17.3"
